--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@formspree/react": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "react-magic-motion": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
